--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,19 @@
 /lib
 /test-result
 /logs
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
